--- a/sass/app/css/free/tour/template1/_single.scss
+++ b/sass/app/css/free/tour/template1/_single.scss
@@ -1444,7 +1444,8 @@
 
     @media #{$max767} {
         transform: rotateX(0);
-        z-index: 999;
+        z-index: 9999;
+        width: 100%;
     }
     &.active{
         transform: rotateX(0deg);
@@ -1539,6 +1540,7 @@
 
             @media #{$max767} {
                 flex-grow: 1;
+                width: 100%;
             }
         }
     }
